# FluxStore

./: .clang-format  CMakeLists.txt  README.md
src/: main.cc
src/include/store/: file_index.h  file_index_json.h  file_index_mem.h  file_system.h  flux_file_system.h  flux_store_client.h  local_file_system.h  slice.h  status.h
src/store/: file_index_json.cc  file_index_mem.cc  flux_file_system.cc  flux_store_client.cc  local_file_system.cc  status.cc
